k8s/blueprints/oathkeeper/deployment-merge.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oathkeeper
spec:
  template:
    spec:
      tolerations:
        - effect: NoSchedule
          key: node
          value: findforce
      topologySpreadConstraints:
        - labelSelector:
            matchLabels: {}
          maxSkew: 2
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
