k8s/blueprints/oathkeeper/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oathkeeper-proxy
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4455"
              protocol: TCP
          rules:
            http: [{}]
    - fromEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - monitoring
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
          rules:
            http: [{}]
